--- a/GuardianCapitalLLC/Views/Account/_ClientLayout.cshtml
+++ b/GuardianCapitalLLC/Views/Account/_ClientLayout.cshtml
@@ -33,6 +33,8 @@
 	<link href="~/switcher/demo.css" rel="stylesheet" />
 
 	<link href="~/css/account.css?v=2" rel="stylesheet" />
+
+	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2905505798857213" crossorigin="anonymous"></script>
 </head>
 <body class="main-body app ltr sidebar-gone horizontal">
 
