Commit slight styles error

--- a/GuardianCapitalLLC/Views/Account/_ClientLayout.cshtml
+++ b/GuardianCapitalLLC/Views/Account/_ClientLayout.cshtml
@@ -155,7 +155,7 @@
 				<div class="container-fluid pt-0 ht-100p">
 					<div class="breadcrumb-header justify-content-between m-0">
 						<div class="left-content">
-							©<script>document.write(new Date().getFullYear());</script> Guardian Capital LLC.
+							©<script>document.write(new Date().getFullYear());</script> Guardian Capitol LLC.
 						</div>
 						<div class="justify-content-center mt-2">
 						</div>
