--- a/GuardianCapitalLLC/Views/Shared/_Layout.cshtml
+++ b/GuardianCapitalLLC/Views/Shared/_Layout.cshtml
@@ -165,7 +165,7 @@
 		<div class="main-footer">
 			<div class="container-fluid pt-0 ht-100p">
 				Copyright © <script>document.write(new Date().getFullYear());</script>
-				<a class="text-primary">Guardian Capital LLC</a>.
+				<a class="text-primary">Guardian Capitol LLC</a>.
 			</div>
 		</div>
 		<!-- Footer closed -->
