--- a/GuardianCapitalLLC/Views/Account/Login.cshtml
+++ b/GuardianCapitalLLC/Views/Account/Login.cshtml
@@ -45,6 +45,11 @@
 		</form>
 	</div>
 </div>
+<div>
+	<a asp-controller="Account" asp-action="DownloadClientPdf" class="btn btn-primary btn-lg btn-block mt-5">
+		View our clients
+	</a>
+</div>
 
 <script>
 	function setActiveTab(tab) {
