--- a/GuardianCapitalLLC/Views/Account/Login.cshtml
+++ b/GuardianCapitalLLC/Views/Account/Login.cshtml
@@ -13,12 +13,16 @@
 	</div>
 }
 
-<h3 class="text-primary">Private Wealth Clients</h3>
+<div class="d-flex flex-row justify-content-between">
+	<h3 class="text-primary">Private Wealth Clients</h3>
+	<a class="btn btn-dark" href="https://video.goldco.com/tom-selleck-gold-silver-kit-g-042125/?cq_net=%7Bnetwork%7D&cq_plac=%7Bplacement%7D&cq_plt=gdp&cq_term=%7Bkeyword%7D&gad_campaignid=22633263768&gad_source=2&gclid=Cj0KCQjws4fEBhD-ARIsACC3d2-ThJQ0aEBV_BBoWJ6T-aRaCBDV_cLNi_CEfphx-ddPjh2K7vwiKpQaAtprEALw_wcB&ls=001-Video-Youtube-Internal&sfcid=701Qh00000Xbb5e&utm_campaign=701Qh00000Xbb5e&utm_medium=Video&utm_medium=cpc&utm_source=Youtube-Internal&utm_source=google&utm_term=" target="_blank">
+		<img src="~/img/75f068f3-white-goldco-logo-gold-flame_106g02g06e02g000000000.png" alt="GoldCo Logo" style="height: 32px; width: auto;">
+	</a>
+</div>
 <div class="row row-sm form-styles">
 	<div class="col-lg-6 col-xl-6 col-md-12 col-sm-12">
-		<h4>My Account Login</h4>
+		<h4>My Account Login</h4>	
 		<div class="accent-line"></div>
-
 		<div class="mb-3">
 			<a href="javascript:void(0);" class="btn btn-outline-info tab-button active px-5" onclick="setActiveTab('client')">CLIENT</a>
 			<a href="javascript:void(0);" class="btn btn-outline-info tab-button px-5" onclick="setActiveTab('advisor')">ADVISOR</a>
