Commit fix typo

--- a/GuardianCapitalLLC/Views/Account/_ClientLayout.cshtml
+++ b/GuardianCapitalLLC/Views/Account/_ClientLayout.cshtml
@@ -140,7 +140,7 @@
 										<h5 class="card-title text-dark tx-medium mg-b-10">Toronto Office</h5>
 										<p class="card-subtitle mg-b-15 mt-3">Commerce Court West</p>
 										<p class="card-subtitle mg-b-15">199 Bay Street • Suite 3100</p>
-										<p class="card-subtitle mg-b-15">PO Box 201 • Toronot, Ontario. M5L 1E8</p>
+										<p class="card-subtitle mg-b-15">PO Box 201 • Toronto, Ontario. M5L 1E8</p>
 										<p class="card-subtitle mg-b-15 mt-3">E: <span class="text-dark">toronto@guardiancapital.com</span></p>
 										<p class="card-subtitle mg-b-15">T: <span class="text-dark">1-877-704-2430</span></p>
 									</div>
