--- a/GuardianCapitalLLC/Views/Account/TransferFundsToInternalAccount.cshtml
+++ b/GuardianCapitalLLC/Views/Account/TransferFundsToInternalAccount.cshtml
@@ -58,13 +58,13 @@
 				</div>
 
 				<div class="form-group">
-					<label class="form-label">Password</label>
-					<input asp-for="Pin" type="password" class="form-control" placeholder="Enter your password">
+					<label class="form-label">Security Pin</label>
+					<input asp-for="Pin" type="password" class="form-control" placeholder="Enter your pin">
 				</div>
 
 				<div class="modal-footer">
 					<a asp-controller="Account" asp-action="Index" class="btn btn-outline-dark ms-4 px-5">Cancel</a>
-					<button type="submit" class="btn btn-info px-5">Review Transfer</button>
+					<button type="submit" class="btn btn-info px-5">Reset Pin</button>
 				</div>
 			</form>
 		</div>
