--- a/GuardianCapitalLLC/Views/Users/Details.cshtml
+++ b/GuardianCapitalLLC/Views/Users/Details.cshtml
@@ -21,6 +21,15 @@
 					</div>
 				</div>
 			}
+			@if (!ViewData.ModelState.IsValid)
+			{
+				<div class="card bg-warning text-white">
+					<div class="card-body d-flex align-items-center p-3">
+						<i class="fas fa-exclamation-circle me-2"></i>
+						<div asp-validation-summary="ModelOnly" class="validation-summary-no-bullets flex-grow-1"></div>
+					</div>
+				</div>
+			}
 			<div class="main-contact-info-body p-4">
 				<div>
 					<h5 class="tx-dark tx-medium mg-b-10">@Model.FullName</h5>
