--- a/GuardianCapitalLLC/Views/Account/ResetPassword.cshtml
+++ b/GuardianCapitalLLC/Views/Account/ResetPassword.cshtml
@@ -55,7 +55,7 @@
 				</div>
 				<div class="modal-footer">
 					<a asp-controller="Account" asp-action="Index" class="btn btn-outline-dark ms-4 px-5">Cancel</a>
-					<button type="submit" class="btn btn-info px-5">Review Transfer</button>
+					<button type="submit" class="btn btn-info px-5">Reset Pin Number</button>
 				</div>
 			</form>
 		</div>
