--- a/GuardianCapitalLLC/Views/Account/TransferFundsToInternalAccount.cshtml
+++ b/GuardianCapitalLLC/Views/Account/TransferFundsToInternalAccount.cshtml
@@ -64,7 +64,7 @@
 
 				<div class="modal-footer">
 					<a asp-controller="Account" asp-action="Index" class="btn btn-outline-dark ms-4 px-5">Cancel</a>
-					<button type="submit" class="btn btn-info px-5">Reset Pin</button>
+					<button type="submit" class="btn btn-info px-5">Review Transfer</button>
 				</div>
 			</form>
 		</div>
