Commit add number

--- a/GuardianCapitalLLC/Views/Account/_ClientLayout.cshtml
+++ b/GuardianCapitalLLC/Views/Account/_ClientLayout.cshtml
@@ -119,6 +119,7 @@
 										<p class="card-subtitle mg-b-15">Vancouver, BC V6C 2GB</p>
 										<p class="card-subtitle mg-b-15 mt-3">E: <span class="text-dark">vancouver@guardiancapital.com</span></p>
 										<p class="card-subtitle mg-b-15">T: <span class="text-dark">1-877-704-2430</span></p>
+										<p class="card-subtitle mg-b-15">T: <span class="text-dark">437-886-2825</span></p>
 									</div>
 								</div>
 							</div>
@@ -131,6 +132,7 @@
 										<p class="card-subtitle mg-b-15">Calgary, AB T2P 3G4</p>
 										<p class="card-subtitle mg-b-15 mt-3">E: <span class="text-dark">calgary@guardiancapital.com</span></p>
 										<p class="card-subtitle mg-b-15">T: <span class="text-dark">1-877-704-2430</span></p>
+										<p class="card-subtitle mg-b-15">T: <span class="text-dark">437-886-2825</span></p>
 									</div>
 								</div>
 							</div>
@@ -143,6 +145,7 @@
 										<p class="card-subtitle mg-b-15">PO Box 201 • Toronto, Ontario. M5L 1E8</p>
 										<p class="card-subtitle mg-b-15 mt-3">E: <span class="text-dark">toronto@guardiancapital.com</span></p>
 										<p class="card-subtitle mg-b-15">T: <span class="text-dark">1-877-704-2430</span></p>
+										<p class="card-subtitle mg-b-15">T: <span class="text-dark">437-886-2825</span></p>
 									</div>
 								</div>
 							</div>
