--- a/GuardianCapitalLLC/Views/Account/Index.cshtml
+++ b/GuardianCapitalLLC/Views/Account/Index.cshtml
@@ -14,13 +14,18 @@
 					<div class="card-body">
 						<div class="row">
 							<div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
-								<div class="d-flex flex-row justify-content-between">
+								<div class="d-flex flex-column flex-lg-row justify-content-between">
 									<div class="text-justified align-items-center">
 										<h3 class="text-dark font-weight-semibold mb-2 mt-0">Welcome back, <span class="text-primary">@Model.FullName</span></h3>
 									</div>
-									<a class="btn btn-dark" href="https://video.goldco.com/tom-selleck-gold-silver-kit-g-042125/?cq_net=%7Bnetwork%7D&cq_plac=%7Bplacement%7D&cq_plt=gdp&cq_term=%7Bkeyword%7D&gad_campaignid=22633263768&gad_source=2&gclid=Cj0KCQjws4fEBhD-ARIsACC3d2-ThJQ0aEBV_BBoWJ6T-aRaCBDV_cLNi_CEfphx-ddPjh2K7vwiKpQaAtprEALw_wcB&ls=001-Video-Youtube-Internal&sfcid=701Qh00000Xbb5e&utm_campaign=701Qh00000Xbb5e&utm_medium=Video&utm_medium=cpc&utm_source=Youtube-Internal&utm_source=google&utm_term=" target="_blank">
-										<img src="~/img/75f068f3-white-goldco-logo-gold-flame_106g02g06e02g000000000.png" alt="GoldCo Logo" style="height: 32px; width: auto;">
-									</a>
+									<div>
+										<a class="btn btn-dark" href="https://video.goldco.com/tom-selleck-gold-silver-kit-g-042125/?cq_net=%7Bnetwork%7D&cq_plac=%7Bplacement%7D&cq_plt=gdp&cq_term=%7Bkeyword%7D&gad_campaignid=22633263768&gad_source=2&gclid=Cj0KCQjws4fEBhD-ARIsACC3d2-ThJQ0aEBV_BBoWJ6T-aRaCBDV_cLNi_CEfphx-ddPjh2K7vwiKpQaAtprEALw_wcB&ls=001-Video-Youtube-Internal&sfcid=701Qh00000Xbb5e&utm_campaign=701Qh00000Xbb5e&utm_medium=Video&utm_medium=cpc&utm_source=Youtube-Internal&utm_source=google&utm_term=" target="_blank">
+											<img src="~/img/75f068f3-white-goldco-logo-gold-flame_106g02g06e02g000000000.png" alt="GoldCo Logo" style="height: 32px; width: auto;">
+										</a>
+										<a class="btn" href="" target="_blank" style="background-color:#1c3464">
+											<img src="~/img/maximustitle.png" alt="Maximus Title Logo" style="height: 32px; width: auto;">
+										</a>
+									</div>
 								</div>
 							</div>
 						</div>
@@ -45,7 +50,7 @@
 			}
 			<div class="col-xl-12 col-lg-12 col-md-12 col-xs-12">
 				<div class="card p-2">
-					<div class="col-xl-12 col-lg-12 col-md-12 col-sm-6">
+					<div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
 						<div class="d-flex flex-wrap justify-content-center gap-2 border p-3 br-5 align-items-center mt-2">
 							<div class="mx-2 d-inline-block">
 								<span class="tx-18 text-dark">Currency: </span>
@@ -53,15 +58,15 @@
 							@foreach (var rate in Model.ConvertedBalances)
 							{
 								Dictionary<string, string> currencySymbols = new Dictionary<string, string>
-							{
-							{ "USD", "$" },
-							{ "CAD", "$" },
-							{ "EUR", "€" },
-							{ "GBP", "£" },
-							{ "JPY", "¥" },
-							{ "MXN", "$" },
-							{ "KWD", "د.ك" }
-							};
+								{
+									{ "USD", "$" },
+									{ "CAD", "$" },
+									{ "EUR", "€" },
+									{ "GBP", "£" },
+									{ "JPY", "¥" },
+									{ "MXN", "$" },
+									{ "KWD", "د.ك" }
+								};
 
 								// Assign class based on currency key (USD gets 'btn-info' by default)
 								string btnClass = rate.Key == "USD" ? "btn btn-info currency-btn" : "btn btn-outline-info currency-btn";
