--- a/GuardianCapitalLLC/Views/Account/PrintProfile.cshtml
+++ b/GuardianCapitalLLC/Views/Account/PrintProfile.cshtml
@@ -104,7 +104,7 @@
 	</div>
 </div>
 
-<div class="text-end mt-4 mb-4 no-print">
+<div class="text-end mt-4 mb-4 no-print account-information">
 	<a class="btn btn-outline-primary" asp-action="Index" asp-controller="Account">Cancel</a>
 	<button class="btn btn-outline-primary" onclick="javascript:window.print();">🖨️ Print User Profile</button>
 </div>
