--- a/GuardianCapitalLLC/Views/Account/Index.cshtml
+++ b/GuardianCapitalLLC/Views/Account/Index.cshtml
@@ -22,9 +22,9 @@
 										<a class="btn btn-dark" href="https://video.goldco.com/tom-selleck-gold-silver-kit-g-042125/?cq_net=%7Bnetwork%7D&cq_plac=%7Bplacement%7D&cq_plt=gdp&cq_term=%7Bkeyword%7D&gad_campaignid=22633263768&gad_source=2&gclid=Cj0KCQjws4fEBhD-ARIsACC3d2-ThJQ0aEBV_BBoWJ6T-aRaCBDV_cLNi_CEfphx-ddPjh2K7vwiKpQaAtprEALw_wcB&ls=001-Video-Youtube-Internal&sfcid=701Qh00000Xbb5e&utm_campaign=701Qh00000Xbb5e&utm_medium=Video&utm_medium=cpc&utm_source=Youtube-Internal&utm_source=google&utm_term=" target="_blank">
 											<img src="~/img/75f068f3-white-goldco-logo-gold-flame_106g02g06e02g000000000.png" alt="GoldCo Logo" style="height: 32px; width: auto;">
 										</a>
-										<a class="btn" href="" target="_blank" style="background-color:#1c3464">
-											<img src="~/img/maximustitle.png" alt="Maximus Title Logo" style="height: 32px; width: auto;">
-										</a>
+										@* <a class="btn" href="" target="_blank" style="background-color:#1c3464"> *@
+										@* 	<img src="~/img/maximustitle.png" alt="Maximus Title Logo" style="height: 32px; width: auto;"> *@
+										@* </a> *@
 									</div>
 								</div>
 							</div>
